# python-bitcoin.de

./: CONTRIBUTING.md  LICENSE  README.md  setup.cfg
.github/actions/lint/: action.yml
.github/workflows/: ci.yml  lint.yml  publish-to-pypi.yml
bitcoinde/: __init__.py  trading_api.py
bitcoinde/config/: api.cfg
