[metadata]
name = bitcoinde
version = 0.0.0
description = Python wrapper for the bitcoin.de trading API
author = Riccardo Bucco
author_email = riccardobucco@gmail.com
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = False
install_requires =
    requests

[options.package_data]
bitcoinde = config/*.cfg

[flake8]
max-line-length = 100